--- a/feedback/exercises/es17btech11019/gvv_feedback_manual.tex
+++ b/feedback/exercises/es17btech11019/gvv_feedback_manual.tex
@@ -249,27 +249,27 @@ Control Systems
 % For peerreview papers, this IEEEtran command inserts a page break and
 % creates the second title. It will be ignored for other modes.
 %\IEEEpeerreviewmaketitle
-\begin{abstract}
-This manual is an introduction to control systems based on GATE problems.Links to sample Python codes are available in the text.  
-\end{abstract}
-Download python codes using 
-\begin{lstlisting}
-svn co https://github.com/gadepall/school/trunk/control/codes
-\end{lstlisting}
-\section{Signal Flow Graph}
-\section{Gain of Feedback Circuits}
-\subsection {Voltage Amplifiers}
+%\begin{abstract}
+%This manual is an introduction to control systems based on GATE problems.Links to sample Python codes are available in the text.  
+%\end{abstract}
+%Download python codes using 
+%\begin{lstlisting}
+%svn co https://github.com/gadepall/school/trunk/control/codes
+%\end{lstlisting}
+%\section{Signal Flow Graph}
+%\section{Gain of Feedback Circuits}
+%\subsection {Voltage Amplifiers}
 \input{chapters/es17btech11019.tex}
-\section{Bode Plot}
-\section{Second order System}
-\section{Routh Hurwitz Criterion}
-\section{State-Space Model}
-\section{Nyquist Plot}
-\section{Compensators}
-\section{Gain Margin}
-\section{Phase Margin}
-\section{Oscillator}
-\section{Root Locus}
-\section{Polar Plot}
-\section{PID Controller}
+%\section{Bode Plot}
+%\section{Second order System}
+%\section{Routh Hurwitz Criterion}
+%\section{State-Space Model}
+%\section{Nyquist Plot}
+%\section{Compensators}
+%\section{Gain Margin}
+%\section{Phase Margin}
+%\section{Oscillator}
+%\section{Root Locus}
+%\section{Polar Plot}
+%\section{PID Controller}
 \end{document}
